feat(fastapi): demo video
